﻿
Version 1.2-draft
===============================================================================
New features:
* Stores debug engines used with targets.
* Targets stored in registry as JSON instead of custom format.

Known issues:
* Remote (no authentication) support.
* Sometimes, first reattach failes to record.

Version 1.1
===============================================================================
New features:
* Better UI support.
* Multiple targets.
* More hotkeys.
* Remote debugging support.
* Minor language changes.

Bugfixes:
* Minor fixes, UAC support etc.

Version 1.0
===============================================================================
Initial release. 


Future work
===============================================================================
* Native (VsDebugger) instead of slower DTE automation objects.
* Proper support for remote debugging (Transports, Protocols, Qualifiers etc).
* Auto-reattach upon Rebuild?
* Auto-attach on process start / restart
* Custom pinned targets
* Solution specific reattach history
* Blacklist specific processes (e.g. *.vshost etc)
